# bazel-cpp20-modules-coverage

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  Justfile  MODULE.bazel  Makefile  README.md  bazelbin  bazelminimal  bazelout  bazeltestlogs  devenv.nix  devenv.yaml  llvm-project  main.py  nohup.out  pyproject.toml  query.py  replicate.nu  std  test_files.txt
modules/: BUILD.bazel  lib.cppm  main.cpp  test.cpp
no_modules/: BUILD.bazel  lib.cpp  lib.h  main.cpp  test.cpp
test/: test.py
tool/: .bazelrc  .gitignore  .python-version  BUILD.bazel  Justfile  MODULE.bazel  README  README.txt  __main__.py  devenv.nix  devenv.yaml  example.py  main.py  pyproject.toml  requirements_lock.txt  rule.bu.bzl  rule.bzl
tool/arg/: parse.py  prep.py  range.py  type.py
tool/constraints/: BUILD.bazel
tool/lib/: deco.py  gen.py  popen.py  pretty.py
tool/line/: line.py
tool/log/: const.py  fmt.py  logger.py
tool/proc/: filter.py  gather.py  io.py
tool/src/: __main__.py
tool/src/arg/: parse.py  prep.py  type.py
tool/src/lib/: deco.py  popen.py  pretty.py  util.py
tool/src/line/: delimiters.py  line.py
tool/src/log/: color.py  fmt.py  logger.py
tool/src/proc/: filter.py  gather.py  submmit.py
tool/src/stage/: mid.py  post.py  pre.py
tool/src/tool/: __init__.py  __main__.py
tool/src/tool/arg/: action.py  cmd.py  log.py  parse.py  path.py  prep.py  stage.py  type.py
tool/src/tool/lib/: deco.py  gen.py  popen.py  pretty.py
tool/src/tool/line/: delimiter.py  delimiters.py
tool/src/tool/log/: color.py  fmt.py
tool/src/tool/proc/: filter.py  gather.py  submit.py  submmit.py
tool/src/tool/stage/: mid.py  post.py  pre.py
tool/stage/: mid.py  post.py
tool/test/: BUILD.bazel  mypy.bzl  mypy.py  runfiles.py  test_tool.py
tool/test/data/: lib.cppm  main.cpp  test.cpp
tool/test_tool/: BUILD.bazel
tool/toolchain/: BUILD.bazel
tool/toolchains/: BUILD.bazel
