load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:py_binary.bzl", "py_binary")

cc_library(
    name = "std",
    srcs = glob(["std/std/*.inc"]),
    copts = ["-Wno-reserved-module-identifier"],
    features = ["cpp_modules"],
    linkopts = [],
    module_interfaces = ["std/std.cppm"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "pp_tool",
    srcs = ["preprocess.py"],
)
