module(
    name = "minimal-example",
    version = "0.0.1",
    repo_name = "minimal",
)

bazel_dep(name = "rules_cc", version = "0.2.16", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "preprocessing_tool", version = "0.0.1", dev_dependency = True)

local_path_override(
    module_name = "preprocessing_tool",
    path = "tool/preprocessing_tool",
)
