module(
    name = "minimal-example",
    version = "0.0.1",
    repo_name = "minimal",
)

bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

bazel_dep(name = "rules_python", version = "1.9.0-rc1")
bazel_dep(name = "tool", version = "0.0.1")
local_path_override(
    module_name = "tool",
    path = "tool",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14",
)
