load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@tool//tool:rule.bzl", "cc_pp")

filegroup(
    name = "test_data",
    srcs = glob(["*.cpp", "*.cppm"]),
    visibility = ["@tool//:__pkg__"],
)

cc_pp(
    name = "process_srcs",
    srcs = glob(["*.cpp"]),
)

cc_binary(
    name = "my_binary",
    srcs = [":process_srcs"],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = [],
    features = ["cpp_modules"],
    linkopts = [],
    deps = [":lib"],
)

cc_library(
    name = "lib",
    srcs = [],
    copts = [],
    features = ["cpp_modules"],
    linkopts = [],
    module_interfaces = [":lib_pp"],
    deps = ["//:std"],
)

config_setting(
    name = "do_cov",
    values = {"define": "cov=1"},
)

cc_pp(
    name = "lib_pp",
    srcs = ["lib.cppm"],
    keep_comments = select({
        "do_cov": True,
        "//conditions:default": False,
    }),
    local_defines = select({
        ":do_cov": ["COVERAGE"],
        "//conditions:default": [],
    }),
    out_ext = select({
        ":do_cov": "cpp",  # (.cppm -> .cpp) Can be used as `srcs` argument.
        "//conditions:default": "",  # (.cppm -> .cppm) Keep existing extension.
    }),
)

cc_pp(
    name = "test_pp",
    srcs = ["test.cpp"],
    keep_comments = select({
        "do_cov": False,
        "//conditions:default": True,
    }),
    local_defines = select({
        ":do_cov": ["COVERAGE"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "test",
    srcs = [":test_pp"] + select({
        ":do_cov": [":lib_pp"],
        "//conditions:default": [],
    }),
    copts = [],
    features = select({
        ":do_cov": [],
        "//conditions:default": ["cpp_modules"],
    }),
    linkopts = [],
    module_interfaces = select({
        ":do_cov": [],
        "//conditions:default": [":lib_pp"],
    }),
    deps = [
        "//:std",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
