load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@tool//:rule.bzl", "cc_pp")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = [],
    features = ["cpp_modules"],
    linkopts = [],
    deps = [":lib"],
)

cc_library(
    name = "lib",
    srcs = [],
    copts = [],
    features = ["cpp_modules"],
    linkopts = [],
    module_interfaces = [":lib_pp"],
    deps = ["//:std"],
)

config_setting(
    name = "do_cov",
    values = {"define": "cov=1"},
)

cc_pp(
    name = "lib_pp",
    srcs = ["lib.cppm"],
    local_defines = select({
        ":do_cov": ["COVERAGE"],
        "//conditions:default": [],
    }),
    out_ext = select({
        ":do_cov": "cpp",  # (.cppm -> .cpp) Can be used in `srcs` argument.
        "//conditions:default": "",  # (.cppm -> .cppm) Keep existing extension.
    }),
)

cc_pp(
    name = "test_pp",
    srcs = ["test.cpp"],
    local_defines = select({
        ":do_cov": ["COVERAGE"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "test",
    srcs = [":test_pp"] + select({
        ":do_cov": [":lib_pp"],
        "//conditions:default": [],
    }),
    copts = [],
    features = select({
        ":do_cov": [],
        "//conditions:default": ["cpp_modules"],
    }),
    linkopts = [],
    module_interfaces = select({
        ":do_cov": [],
        "//conditions:default": [":lib_pp"],
    }),
    deps = [
        "//:std",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
