load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_binary(
    copts = [],
    linkopts = [],
    name = "main",
    srcs = ["main.cpp"],
    deps = [":lib"]
)

cc_library(
    copts = [],
    linkopts = [],
    name = "lib",
    srcs = ["lib.cpp"],
    hdrs = ["lib.h"],
)

cc_test(
    copts = [],
    deps = [
        "@googletest//:gtest_main",
        "@googletest//:gtest",
        ":lib",
    ],
    linkopts = [],
    name = "test",
    srcs = (["test.cpp"]),
)
