load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = [],
    linkopts = [],
    deps = [":lib"],
)

cc_library(
    name = "lib",
    srcs = ["lib.cpp"],
    hdrs = ["lib.h"],
    copts = [],
    linkopts = [],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    copts = [],
    linkopts = [],
    deps = [
        ":lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
