load("@rules_python//python:defs.bzl", "py_binary", "py_library")

alias(
    name = "tool",
    actual = select({
        "@rules_python//python/config_settings:is_python_3.13": ":tool_3_13",
        "@rules_python//python/config_settings:is_python_3.14": ":tool_3_14",
        "//conditions:default": ":tool_auto",
    }),
    visibility = ["//toolchain:__pkg__", "//test:__pkg__"],
)

deps = [
    ":arg",
    ":lib",
    ":line",
    ":log",
    ":main",
    ":proc",
    ":stage",
]

py_binary(
    name = "tool_auto",
    srcs = ["main.py"],
    main = "main.py",
    deps = deps,
)

py_binary(
    name = "tool_3_13",
    srcs = ["main.py"],
    main = "main.py",
    python_version = "3.13",
    deps = deps + [
        "@pypi_3_13//more_itertools",
        "@pypi_3_13//py_machineid",
    ],
)

py_binary(
    name = "tool_3_14",
    srcs = ["main.py"],
    main = "main.py",
    python_version = "3.14",
    deps = deps + [
        "@pypi_3_14//more_itertools",
        "@pypi_3_14//py_machineid",
    ],
)

py_library(
    name = "main",
    srcs = ["src/__main__.py"],
    imports = ["."],
)

py_library(
    name = "arg",
    srcs = glob(["src/arg/*.py"]),
    imports = ["."],
)

py_library(
    name = "lib",
    srcs = glob(["src/lib/*.py"]),
    imports = ["."],
)

py_library(
    name = "line",
    srcs = glob(["src/line/*.py"]),
    imports = ["."],
)

py_library(
    name = "log",
    srcs = glob(["src/log/*.py"]),
    imports = ["."],
)

py_library(
    name = "proc",
    srcs = glob(["src/proc/*.py"]),
    imports = ["."],
)

py_library(
    name = "stage",
    srcs = glob(["src/stage/*.py"]),
    imports = ["."],
)
