load("@rules_python//python:defs.bzl", "py_binary")

alias(
    name = "tool",
    actual = select({
        "@rules_python//python/config_settings:is_python_3.13": ":tool_3_13",
        "@rules_python//python/config_settings:is_python_3.14": ":tool_3_14",
        "//conditions:default": ":tool_auto",
    }),
    visibility = ["//toolchain:__pkg__", "//test:__pkg__"],
)

entry_point = "src/tool/__main__.py"

py_binary(
    name = "tool_auto",
    srcs = glob(["src/tool/**/*.py"]),
    main = entry_point,
    deps = [],
    imports = ["src"]
)

py_binary(
    name = "tool_3_13",
    srcs = glob(["src/tool/**/*.py"]),
    main = entry_point,
    python_version = "3.13",
    deps = [
        "@pypi_3_13//more_itertools",
        "@pypi_3_13//py_machineid",
    ],
    imports = ["src"]
)

py_binary(
    name = "tool_3_14",
    srcs = glob(["src/tool/**/*.py"]),
    main = entry_point,
    python_version = "3.14",
    deps = [
        "@pypi_3_14//more_itertools",
        "@pypi_3_14//py_machineid",
    ],
    imports = ["src"]
)
