load("@//:rule.bzl", "cc_pp")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_tool",
    srcs = ["test_tool.py"],
    args = [
        "--verbosity=4",
        "-rA",  # Show extra test summary info for all tests.
        "--capture=no",  # Disable output capturing (shows print statements in real-time).
        "--color=yes",
    ],
    data = [":test_data"],
    env = {
        "BAZEL_PY_TEST": "1",
        "TEST_ENVIRONMENT": "bazel",
    },
    main = "test/test_tool.py",
    # tags = ["no-sandbox"],
    deps = [
        "//:tool",
        "@rules_python//python/runfiles",
        "@tool_deps//pytest",
    ],
)

cc_pp(
    name = "pp",
    srcs = [":test_data"],
)

filegroup(
    name = "test_data",
    srcs = glob([
        "data/*.cpp",
        "data/*.cppm",
    ]),
)
