load("@rules_python//python/toolchains:py_toolchain.bzl", "py_toolchain")

toolchain_type(name = "preprocess_toolchain_type")

# Python 3.12 toolchains.

py_toolchain(
    name = "py312_toolchain_impl",
    py_binary = "//:preprocess_tool",
    python_version = "3.12",
)

toolchain(
    name = "preprocess_toolchain_linux_py312",
    exec_compatible_with = [
        "@platforms//os:linux",
        "//constraints:py312",
    ],
    toolchain = ":py312_toolchain_impl",
    toolchain_type = ":preprocess_toolchain_type",
)

toolchain(
    name = "preprocess_toolchain_windows_py312",
    exec_compatible_with = [
        "@platforms//os:windows",
        "//constraints:py312",
    ],
    toolchain = ":py312_toolchain_impl",
    toolchain_type = ":preprocess_toolchain_type",
)

# Python 3.13 toolchains.

py_toolchain(
    name = "py313_toolchain_impl",
    py_binary = ":preprocess_tool",
    python_version = "3.13",
)

toolchain(
    name = "preprocess_toolchain_linux_py313",
    exec_compatible_with = [
        "@platforms//os:linux",
        "//constraints:py313",
    ],
    toolchain = ":py313_toolchain_impl",
    toolchain_type = ":preprocess_toolchain_type",
)

toolchain(
    name = "preprocess_toolchain_windows_py313",
    exec_compatible_with = [
        "@platforms//os:windows",
        "//constraints:py313",
    ],
    toolchain = ":py313_toolchain_impl",
    toolchain_type = ":preprocess_toolchain_type",
)
